<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="390dp"
    android:layout_height="340dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    android:layout_margin="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="195dp"
            app:srcCompat="@drawable/ejemplo1"
            android:scaleType="centerCrop"
            android:contentDescription="Lorem impsum dolor sit amet"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="137dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/tvCardOrden1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtProduct1"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCardOrden2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/txtProduct3"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:background="@color/chathamsBlue"
                android:text="@string/txtProduct6"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                />


            <!-- <TextView
                 android:id="@+id/tvCard3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/textColorSecondary"
                 /> -->
            <!-- android:padding="8dp" -->

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>